# ShadowDet

./: CMakeLists.txt  LICENSE  README.md
include/: FindShadow.h
src/: FindShadow.cpp  Main.cpp
